# QuSDK

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  QuApiDebug.props  QuApiDisabled.props  QuApiDisabled.xcconfig  QuApiEnabled.xcconfig  QuApiRelease.props  QuSdk.sln  README.md
QuSdk.xcworkspace/: contents.xcworkspacedata
api/: CMakeLists.txt
api/Include/: quApi.h  quApi.hpp  quConstants.h
example/: ActivityChannelThread.cpp  ActivityChannelThread.h  Advanced.cpp  BestPractices.cpp  CMakeLists.txt  QuApiExample.vcxproj  QuApiExample.vcxproj.filters  TestdataGenerator.cpp  TestdataGenerator.h  main.cpp
example/QuApiExample.xcodeproj/: project.pbxproj
example/QuApiExample.xcodeproj/xcshareddata/xcschemes/: QuApiExample.xcscheme
loader/: CMakeLists.txt  QuApiLoader.vcxproj  QuApiLoader.vcxproj.filters  quLoaderDylib.cpp  quLoaderDylib.h  quLoaderEnvVar.cpp  quLoaderEnvVar.h  quLoaderMain.cpp
loader/QuApiLoader.xcodeproj/: project.pbxproj
loader/QuApiLoader.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
loader/QuApiLoader.xcodeproj/xcshareddata/xcschemes/: QuApiLoader.xcscheme
